@@ -6,7 +6,7 @@
 
   <groupId>me.tsvrn9</groupId>
   <artifactId>MinecraftManhunt</artifactId>
-  <version>1.2</version>
+  <version>2.0</version>
   <packaging>jar</packaging>
 
   <name>MinecraftManhunt</name>
@@ -41,6 +41,14 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0</version>
+          <configuration>
+              <argLine>--enable-preview</argLine>
+          </configuration>
+      </plugin>
     </plugins>
     <resources>
       <resource>
@@ -56,15 +64,60 @@
           <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
       </repository>
       <repository>
+          <id>jitpack.io</id>
+          <url>https://jitpack.io</url>
+      </repository>
+      <repository>
+          <id>papermc</id>
+          <url>https://repo.papermc.io/repository/maven-public/</url>
+      </repository>
+      <repository>
           <id>sonatype</id>
           <url>https://oss.sonatype.org/content/groups/public/</url>
+      </repository>
+      <repository>
+          <id>central</id>
+          <name>Maven Central Repository</name>
+          <url>https://repo.maven.apache.org/maven2</url>
+          <releases>
+              <enabled>true</enabled>
+          </releases>
+          <snapshots>
+              <enabled>false</enabled>
+          </snapshots>
       </repository>
   </repositories>
 
   <dependencies>
       <dependency>
+          <groupId>com.github.seeseemelk</groupId>
+          <artifactId>MockBukkit-v1.21</artifactId>
+          <version>3.96.1</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-engine</artifactId>
+          <version>5.9.1</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-core</artifactId>
+          <version>5.12.0</version>
+          <scope>test</scope>
+      </dependency>
+      <!-- Incompatible with MockBukkit??
+      <dependency>
           <groupId>org.spigotmc</groupId>
           <artifactId>spigot-api</artifactId>
+          <version>1.21-R0.1-SNAPSHOT</version>
+          <scope>provided</scope>
+      </dependency>
+      -->
+      <dependency>
+          <groupId>io.papermc.paper</groupId>
+          <artifactId>paper-api</artifactId>
           <version>1.21-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
